# Parallel-Programming-Course

CA0/: CA0-union.cpp  CA0.cpp
CA1/code/: CMakeLists.txt  code_Q1.cpp  code_Q2.cpp  code_Q3.cpp  code_Q4.cpp
CA2/: 1.cpp  2.cpp  3.cpp
CA3/: chaos.cpp  multi.cpp  single.cpp
CA4/: My-Wife's-Newphew's-Code.c  p1-openmp.cpp
CA5/: CA5_p1 (1).ipynb  CA5_p2 (1).ipynb  ray_tracing_shadows.cpp
